[package]
name = "firesky"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.24.10"
rustls = { version = "0.23.21", features = ["ring"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tungstenite = {version = "0.26.1", features = ["rustls-tls-webpki-roots"]}
