[package]
name = "firesky"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "firesky"
path = "src/main.rs"

[dependencies]
atrium-api = "0.24.10"
axum = "0.8.1"
futures-util = "0.3.31"
rustls = { version = "0.23.21", features = ["ring"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
socketioxide = { version = "0.16.1", features = ["state"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = {version = "0.26.1", features = ["rustls-tls-webpki-roots"]}
